tests/NormalTests/paczka1/small_fuzzy/20870493.err
Error in line 12: Rd9 SCC3 97,2
Error in line 11: Rd9 A798 43,8
Error in line 16: Kouaxf6QTOY c576 50,9
